--- a/themes/my_theme/templates/about.html
+++ b/themes/my_theme/templates/about.html
@@ -124,7 +124,7 @@
                     </div>
                     <div class="card-body">
                         <h6 class="card-subtitle mb-2 text-muted">Пензенский государственный технологический университет | 2014–2018</h6>
-                        <p class="mb-2">Бакалавр профессионального обучения</p>
+                        <p class="mb-2">Бакалавр </p>
                     </div>
                 </div>
 
