--- a/themes/my_theme/templates/base.html
+++ b/themes/my_theme/templates/base.html
@@ -32,7 +32,7 @@
 <link rel="icon" type="image/png" sizes="32x32" href="{{ SITEURL }}/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="{{ SITEURL }}/favicon-16x16.png">
 <link rel="manifest" href="{{ SITEURL }}/site.webmanifest">
-<link rel="mask-icon" href="{{ SITEURL }}/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="mask-icon" href="{{ SITEURL }}/favicon.svg" color="#5bbad5">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
 
