--- a/themes/my_theme/templates/contacts.html
+++ b/themes/my_theme/templates/contacts.html
@@ -33,8 +33,8 @@
                 <div class="card-body">
                     <h2 class="h4"><i class="fab fa-telegram me-2"></i>Telegram</h2>
                     <p>
-                        <a href="https://t.me/Aw-Sea" target="_blank" class="text-decoration-none">
-                            @Aw-Sea
+                        <a href="https://t.me/larisa_4363" target="_blank" class="text-decoration-none">
+                            @larisa_4363
                         </a>
                     </p>
                 </div>
