ссылки на git 2

--- a/themes/my_theme/templates/projects.html
+++ b/themes/my_theme/templates/projects.html
@@ -93,7 +93,7 @@
                     </div>
 
                     <div class="project-links">
-                        <a href="https://github.com/..." class="btn btn-outline-dark btn-sm me-2">
+                        <a href="https://github.com/Aw-Sea/portfolio" class="btn btn-outline-dark btn-sm me-2">
                             <i class="fab fa-github me-1"></i> Код
                         </a>
                     </div>
